feat: remove RemoteActivity project
- Removed the RemoteActivity project, including server and client components.
- Deleted associated files such as source code, project files, build scripts, and documentation.
- Removed local AI pilot settings from vscode settings.json.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.associations": {
     "windows.h": "c"
-  }
+  },
+  "localaipilot.general.inlineSuggestions": true,
+  "localaipilot.standalone.ollamaModel": "codegemma:2b"
 }
