refactor: update CMake configuration for C++ standard
- Changed the C++ standard from 20 to 17 in the CMakeLists.txt file to align with project requirements.
- Removed MSVC-specific compiler flags to simplify the build configuration.
- This update aims to enhance compatibility and maintainability of the project.

--- a/Client_SpyBot/CMakeLists.txt
+++ b/Client_SpyBot/CMakeLists.txt
@@ -1,27 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(SpyBot VERSION 1.0.0)
 
-# Explicitly set MSVC compiler
-if(MSVC)
-    # Use the latest C++ standard supported by MSVC
-    set(CMAKE_CXX_STANDARD 20)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-    # Add compiler-specific flags for better security and warnings
-    add_compile_options(
-        /W4           # Enable high-level warnings
-        /WX           # Treat warnings as errors
-        /utf-8        # Ensure UTF-8 source and execution character sets
-        /permissive-  # Strict standard conformance
-        /Zc:preprocessor  # Use standard-conforming preprocessor
-    )
-
-    # Additional security-focused compiler flags
-    add_compile_definitions(
-        _CRT_SECURE_NO_WARNINGS  # Disable deprecation warnings for standard C functions
-        _SILENCE_CXX17_RESULT_OF_DEPRECATION_WARNING  # Silence specific deprecation warnings
-    )
-endif()
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Include directories
 include_directories(include)
